Agentforce/force-app/main/default/objects/Contract_Team__c/Contract_Team__c.object-meta.xml
<CustomObject>
    <label>Contract Team</label>
    <nameField>
        <label>Contract Resource</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>