Agentforce/force-app/main/default/objects/Contract_Team__c/fields/Days_Per_Month__c.field-meta.xml
<CustomField>
    <fullName>Days_Per_Month__c</fullName>
    <label>Days Per Month</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>