Agentforce/force-app/main/default/objects/Contract_Team__c/fields/Qty__c.field-meta.xml
<CustomField>
    <fullName>Qty__c</fullName>
    <description>Quantity of Resource</description>
    <label>Qty</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>