Agentforce/force-app/main/default/objects/Contract_Team__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Level of Resource</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ExCo</fullName>
            </value>
            <value>
                <fullName>ExCo-1</fullName>
            </value>
            <value>
                <fullName>ExCo-2</fullName>
            </value>
            <value>
                <fullName>ExCo-3</fullName>
            </value>
            <value>
                <fullName>ExCo-4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>